--- a/index.html
+++ b/index.html
@@ -1,86 +1,100 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Stonewood Cabins – Quick Feedback</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://unpkg.com/alpinejs" defer></script>
-  <style>body{font-family:system-ui;background:#f8f9fa;padding:2rem;text-align:center;}</style>
+  <link rel="icon" href="data:,">
+  <script src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
+  <style>
+    body {font-family:system-ui;background:#f9fafb;padding:2rem;text-align:center;margin:0;}
+    .card {background:white;max-width:500px;margin:2rem auto;padding:2rem;border-radius:16px;box-shadow:0 4px 20px rgba(0,0,0,0.1);}
+    .btn-happy {background:#10b981;color:white;padding:1.2rem 2.5rem;border-radius:12px;border:none;font-size:1.4rem;}
+    .btn-issue {background:#fee2e2;color:#dc2626;padding:1rem 2rem;border-radius:12px;border:none;margin-top:2rem;font-size:1.2rem;}
+    .grid {display:grid;grid-template-columns:repeat(auto-fit,minmax(140px,1fr));gap:1rem;margin:2rem 0;}
+  </style>
 </head>
 <body>
-<div x-data="feedbackApp()">
-  <h1>Stonewood Cabins</h1>
-  <template x-if="cabin && room">
-    <h2>Cabin <span x-text="cabin"></span> – <span x-text="roomName"></span></h2>
-  </template>
+<div class="card" x-data="app()">
+  <h1 style="color:#1e40af">Stonewood Cabins</h1>
+  <h2 x-show="cabin">Cabin <span x-text="cabin"></span> – <span x-text="prettyRoom"></span></h2>
 
   <!-- Happy path -->
-  <div style="margin:2rem 0">
-    <button @click="type='happy'" style="font-size:1.5rem;padding:1rem 2rem;margin:1rem;border-radius:12px;background:#10b981;color:white;border:none">
-      Everything is perfect! 😊
-    </button>
+  <div>
+    <button class="btn-happy" @click="happy=true">Everything is perfect 😊</button>
   </div>
 
   <!-- Issue path -->
-  <div x-show="type==='issue'">
-    <p style="font-size:1.2rem">What needs attention?</p>
-    <div style="display:grid;grid-template-columns:1fr 1fr;gap:1rem;max-width:400px;margin:2rem auto">
-      <template x-for="opt in issues[room || 'generic']">
-        <button @click="selected=opt" style="padding:1rem;background:#e5e7eb;border-radius:8px">
+  <div x-show="!happy && !issue">
+    <button class="btn-issue" @click="issue=true">Something needs attention</button>
+  </div>
+
+  <!-- Happy submission -->
+  <div x-show="happy && !sent">
+    <p style="font-size:1.3rem;margin:2rem 0">Awesome! Want to leave a quick note?</p>
+    <textarea x-model="comment" placeholder="Optional – we love hearing what you enjoyed!" style="width:90%;height:120px;padding:1rem"></textarea><br><br>
+    <button @click="submit('happy')" style="background:#3b82f6;color:white;padding:1rem 2rem;border:none;border-radius:8px">Send Thank You →</button>
+  </div>
+
+  <!-- Issue selection -->
+  <div x-show="issue && !selected">
+    <p style="font-size:1.2rem;margin:2rem 0">What needs a look?</p>
+    <div class="grid">
+      <template x-for="opt in options">
+        <button @click="selected=opt" style="padding:1rem;background:#e5e7eb;border-radius:8px;font-weight:600">
           <span x-text="opt"></span>
         </button>
       </template>
     </div>
-    <button @click="selected='Other'" style="margin-top:1rem;padding:1rem;background:#ddd;border-radius:8px">Other / Comment</button>
+    <button @click="selected='Other / Comment'" style="margin:1rem;padding:1rem;background:#ddd;border-radius:8px">Other / General Comment</button>
   </div>
 
-  <!-- Form -->
-  <div x-show="selected" style="margin-top:2rem">
-    <textarea x-model="comment" placeholder="Optional details…" style="width:90%;max-width:500px;height:100px;padding:1rem"></textarea><br><br>
-    <input type="tel" x-model="phone" placeholder="Your phone (optional – we’ll text you updates)" style="padding:0.5rem;width:90%;max-width:500px"><br><br>
+  <!-- Issue details -->
+  <div x-show="selected && !sent">
+    <p style="font-weight:600;margin:1.5rem 0">You selected: <span x-text="selected"></span></p>
+    <textarea x-model="comment" placeholder="Details (optional)" style="width:90%;height:120px;padding:1rem"></textarea><br><br>
+    <input type="tel" x-model="phone" placeholder="Phone (optional – for updates)" style="padding:0.8rem;width:90%;margin:0.5rem 0"><br>
     <label><input type="checkbox" required> OK to text me updates</label><br><br>
-    <button @click="submit()" style="background:#3b82f6;color:white;padding:1rem 2rem;border:none;border-radius:8px;font-size:1.2rem">Send →</button>
+    <button @click="submit('issue')" style="background:#dc2626;color:white;padding:1rem 2rem;border:none;border-radius:8px;font-size:1.2rem">
+      Send Report →
+    </button>
   </div>
 
-  <div x-show="sent" style="margin-top:3rem;font-size:1.5rem">
-    ✅ Thank you! We’ve got it and will take care of it right away.
+  <div x-show="sent" style="margin:4rem;font-size:1.8rem">
+    ✅ Thank you!<br><br>We’ve got it and will take care of it right away.
   </div>
 </div>
 
 <script>
-function feedbackApp() {
+function app() {
   const params = new URLSearchParams(location.search);
+  const roomMap = {
+    'master-bedroom': 'Master Bedroom','guest-bedroom': 'Guest Bedroom','kitchen': 'Kitchen',
+    'living-hot-tub': 'Living Room / Hot Tub','deck-hot-tub': 'Deck / Hot Tub','bathroom': 'Bathroom'
+  };
+  const roomOptions = {
+    'master-bedroom': ['TV','Bed','Lights','Temperature','Noise','Hot Tub'],
+    'kitchen': ['Appliances','Coffee Maker','Ice Maker','Dishwasher','Cookware'],
+    'living-hot-tub': ['Hot Tub','Fireplace','WiFi','TV','Seating'],
+    'deck-hot-tub': ['Hot Tub','Seating','Lighting'],
+    'default': ['Cleanliness','Noise','Temperature','Hot Tub','TV','Other']
+  };
+
   return {
-    cabin: params.get('c'),
-    room: params.get('room'),
-    type: '',
-    selected: '',
-    comment: '',
-    phone: '',
-    sent: false,
-    roomName() { return this.room ? this.room.split('-').map(w=>w[0].toUpperCase()+w.slice(1)).join(' ') : '' },
-    issues: {
-      'master-bedroom': ['TV','Bed','Lights','Temperature','Noise','Hot Tub'],
-      'kitchen': ['Appliances','Dishwasher','Coffee Maker','Ice Maker','Cookware'],
-      'living-hot-tub': ['Hot Tub','Fireplace','WiFi','TV','Seating'],
-      generic: ['Cleanliness','Smell','Noise','Maintenance','Other']
-    },
-    async submit() {
-      const payload = {
-        cabin: this.cabin,
-        room: this.room,
-        roomName: this.roomName(),
-        type: this.type,
-        issue: this.selected,
-        comment: this.comment,
-        phone: this.phone,
-        timestamp: new Date().toISOString(),
-        url: location.href
-      };
-      await fetch('https://n8n.yourdomain.com/webhook/feedback-stonewood', {
+    cabin: params.get('c') || 'Guest',
+    room: params.get('room') || '',
+    prettyRoom: roomMap[params.get('room') || ''] || 'Your Stay',
+    options: roomOptions[params.get('room') || ''] || roomOptions.default,
+    happy: false, issue: false, selected: '', comment: '', phone: '', sent: false,
+    submit(type) {
+      fetch('https://n8n.yourdomain.com/webhook/stonewood-feedback', {   // ← change this line later
         method: 'POST',
-        headers:{'Content-Type':'application/json'},
-        body: JSON.stringify(payload)
+        headers: {'Content-Type':'application/json'},
+        body: JSON.stringify({
+          cabin: this.cabin, room: this.room, prettyRoom: this.prettyRoom,
+          type, issue: this.selected || 'N/A', comment: this.comment, phone: this.phone || null,
+          timestamp: new Date().toISOString(), url: location.href
+        })
       });
       this.sent = true;
     }
