--- a/index.html
+++ b/index.html
@@ -16,17 +16,27 @@
 </head>
 <body>
 <div class="card" x-data="app()">
-  <h1 style="color:#1e40af">Stonewood Cabins</h1>
+  <h1 style="color:#1e40af;margin-bottom:0.5rem">Stonewood Cabins</h1>
   <h2 x-show="cabin">Cabin <span x-text="cabin"></span> – <span x-text="prettyRoom"></span></h2>
 
-  <!-- Happy path -->
-  <div>
+  <!-- Happy path (only shows if no room was scanned) -->
+  <div x-show="!room && !happy">
     <button class="btn-happy" @click="happy=true">Everything is perfect 😊</button>
   </div>
 
-  <!-- Issue path -->
-  <div x-show="!happy && !issue">
-    <button class="btn-issue" @click="issue=true">Something needs attention</button>
+  <!-- Issue path – auto-shown when a room tag is scanned -->
+  <div x-show="room && !selected">
+    <p style="font-size:1.2rem;margin:2rem 0;font-weight:600">What needs a look?</p>
+    <div class="grid">
+      <template x-for="opt in options">
+        <button @click="selected=opt" style="padding:1rem;background:#e5e7eb;border-radius:8px;font-weight:600">
+          <span x-text="opt"></span>
+        </button>
+      </template>
+    </div>
+    <button @click="selected='Other / General Comment'" style="margin:1rem;padding:1rem;background:#ddd;border-radius:8px">
+      Other / General Comment
+    </button>
   </div>
 
   <!-- Happy submission -->
@@ -36,31 +46,19 @@
     <button @click="submit('happy')" style="background:#3b82f6;color:white;padding:1rem 2rem;border:none;border-radius:8px">Send Thank You →</button>
   </div>
 
-  <!-- Issue selection -->
-  <div x-show="issue && !selected">
-    <p style="font-size:1.2rem;margin:2rem 0">What needs a look?</p>
-    <div class="grid">
-      <template x-for="opt in options">
-        <button @click="selected=opt" style="padding:1rem;background:#e5e7eb;border-radius:8px;font-weight:600">
-          <span x-text="opt"></span>
-        </button>
-      </template>
-    </div>
-    <button @click="selected='Other / Comment'" style="margin:1rem;padding:1rem;background:#ddd;border-radius:8px">Other / General Comment</button>
-  </div>
-
   <!-- Issue details -->
   <div x-show="selected && !sent">
-    <p style="font-weight:600;margin:1.5rem 0">You selected: <span x-text="selected"></span></p>
+    <p style="font-weight:600;margin:1.5rem 0">Selected: <span x-text="selected"></span></p>
     <textarea x-model="comment" placeholder="Details (optional)" style="width:90%;height:120px;padding:1rem"></textarea><br><br>
     <input type="tel" x-model="phone" placeholder="Phone (optional – for updates)" style="padding:0.8rem;width:90%;margin:0.5rem 0"><br>
-    <label><input type="checkbox" required> OK to text me updates</label><br><br>
+    <label style="font-size:0.9rem"><input type="checkbox" required> OK to text me updates</label><br><br>
     <button @click="submit('issue')" style="background:#dc2626;color:white;padding:1rem 2rem;border:none;border-radius:8px;font-size:1.2rem">
       Send Report →
     </button>
   </div>
 
-  <div x-show="sent" style="margin:4rem;font-size:1.8rem">
+  <!-- Thank you screen -->
+  <div x-show="sent" style="margin:4rem;font-size:1.8rem;line-height:1.4">
     ✅ Thank you!<br><br>We’ve got it and will take care of it right away.
   </div>
 </div>
@@ -69,8 +67,12 @@
 function app() {
   const params = new URLSearchParams(location.search);
   const roomMap = {
-    'master-bedroom': 'Master Bedroom','guest-bedroom': 'Guest Bedroom','kitchen': 'Kitchen',
-    'living-hot-tub': 'Living Room / Hot Tub','deck-hot-tub': 'Deck / Hot Tub','bathroom': 'Bathroom'
+    'master-bedroom': 'Master Bedroom',
+    'guest-bedroom': 'Guest Bedroom',
+    'kitchen': 'Kitchen',
+    'living-hot-tub': 'Living Room / Hot Tub',
+    'deck-hot-tub': 'Deck / Hot Tub',
+    'bathroom': 'Bathroom'
   };
   const roomOptions = {
     'master-bedroom': ['TV','Bed','Lights','Temperature','Noise','Hot Tub'],
@@ -85,15 +87,26 @@ function app() {
     room: params.get('room') || '',
     prettyRoom: roomMap[params.get('room') || ''] || 'Your Stay',
     options: roomOptions[params.get('room') || ''] || roomOptions.default,
-    happy: false, issue: false, selected: '', comment: '', phone: '', sent: false,
+    happy: false,
+    selected: '',
+    comment: '',
+    phone: '',
+    sent: false,
+
     submit(type) {
-      fetch('https://n8n.yourdomain.com/webhook/stonewood-feedback', {   // ← change this line later
+      fetch('https://n8n.yourdomain.com/webhook/stonewood-feedback', {  // ← replace this with your real n8n webhook
         method: 'POST',
-        headers: {'Content-Type':'application/json'},
+        headers: {'Content-Type': 'application/json'},
         body: JSON.stringify({
-          cabin: this.cabin, room: this.room, prettyRoom: this.prettyRoom,
-          type, issue: this.selected || 'N/A', comment: this.comment, phone: this.phone || null,
-          timestamp: new Date().toISOString(), url: location.href
+          cabin: this.cabin,
+          room: this.room,
+          prettyRoom: this.prettyRoom,
+          type,
+          issue: this.selected || 'N/A',
+          comment: this.comment || '',
+          phone: this.phone || null,
+          timestamp: new Date().toISOString(),
+          url: location.href
         })
       });
       this.sent = true;
